--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8"/>
-	<title>haxe-phaser-ash</title>
-	<script src="../lib/phaser.js"></script>
+  <meta charset="utf-8" />
+  <title>haxe-phaser-ash</title>
+  <script src="../lib/phaser.js"></script>
+  <script src="../lib/babylon.1.5.0.js"></script>
 </head>
+
 <body>
-	<script src="generated.js"></script>
+  <canvas id="canvas3d" width="800" height="600" style="position:absolute; z-index:-1;"></canvas>
+  <script src="generated.js"></script>
 </body>
+
 </html>
