--- a/test/index.html
+++ b/test/index.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>haxe-phaser-ash</title>
+  <title>whiplash test</title>
   <script src="../lib/phaser.js"></script>
   <script src="../lib/babylon.1.5.0.js"></script>
 </head>
 
 <body>
-  <canvas id="canvas3d" width="800" height="600" style="position:absolute; z-index:-1;"></canvas>
   <script src="generated.js"></script>
 </body>
 
