--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>whiplash test</title>
   <script src="../lib/phaser.js"></script>
-  <script src="../deps/haxe-babylon/lib/babylon.js"></script>
+  <script src="../deps/haxe-babylon/lib/babylon.max.js"></script>
 </head>
 
 <body>
