Added Input static class

--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div id="guiLayer" style="width: 800px; height: 600px; z-index: 10; position: absolute;"></div>
   <script src="generated.js"></script>
 </body>
 
