--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>whiplash test</title>
-  <script src="../deps/haxe-phaser/lib/phaser.js"></script>
+  <script src="../deps/phaser.js"></script>
   <script src="../deps/haxe-babylon/lib/babylon.max.js"></script>
   <script src="../deps/jquery-3.3.1.min.js"></script>
 </head>
