--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,12 @@
   <script src="../deps/phaser.js"></script>
   <script src="../deps/haxe-babylon/lib/babylon.max.js"></script>
   <script src="../deps/jquery-3.3.1.min.js"></script>
+  <style>
+    .pages {
+      color:yellow;
+      position: absolute;
+    }
+  </style>
 </head>
 
 <body>
@@ -16,7 +22,7 @@
       <button class="play">Play</button>
     </div>
     <div class="lobby">
-        Lobby
+      Lobby
       <button class="ready">Ready</button>
     </div>
     <div class="hud">
