--- a/test/index.html
+++ b/test/index.html
@@ -8,8 +8,13 @@
   <script src="../deps/haxe-babylon/lib/babylon.max.js"></script>
   <script src="../deps/jquery-3.3.1.min.js"></script>
   <style>
+    html, body {
+      width: 800px;
+      height: 600px !important;
+    }
+
     .pages {
-      color:yellow;
+      color: yellow;
       position: absolute;
     }
   </style>
