Disabled unsupported features

--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>whiplash test</title>
   <script src="../deps/phaser.js"></script>
-  <script src="../deps/dragonBones.js"></script>
+  <!-- <script src="../deps/dragonBones.js"></script> -->
   <script src="../deps/haxe-babylon/lib/babylon.max.js"></script>
   <script src="../deps/jquery-3.3.1.min.js"></script>
   <style>
