--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,7 @@
   <title>whiplash test</title>
   <script src="../deps/phaser.js"></script>
   <!-- <script src="../deps/dragonBones.js"></script> -->
+  <script src="../deps/SpinePlugin.min.js"></script>
   <script src="../deps/haxe-babylon/lib/babylon.max.js"></script>
   <script src="../deps/jquery-3.3.1.min.js"></script>
   <style>
